--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,8 @@ services:
       - JWT_SECRET=secret_key
       - JWT_ALGORITHM=HS256
       - JWT_EXP_DELTA_SECONDS=3600 
+      - LOCAL_HOST=0.0.0.0
+      - PORT=8002
     depends_on:
       - mongo 
     ports:
